<resources>
    <string name="app_name">Bday Reminder</string>

    //strings for error messages
    <string name="nameError">Enter a valid name</string>
    <string name="surnameError">Enter a valid Surname</string>
    <string name="dateError">Enter valid date: dd/mm/yyyy </string>

    //other strings
    <string name="themeSwitch">Change application theme to dark mode</string>
    <string name="dltBdays">Delete all Birthdays</string>
    <string name="dltBdaysAlert">Caution! this operation cannot be reverted</string>
    <string name="editBirthday">Edit selected birthday</string>
    <string name="addBirthday">Please choose action</string>
    <string name="addImage">Click to add Profile Picture</string>


    //info screen
    <string name="appTitle">Bday Reminder</string>
    <string name="appInfo">Bday Reminder application has been created to for saving birthdays of friends and family,
        and setting a reminders, so you never forget about those birthdays again!</string>
    <string name="appVersion">Version: 1.0 Alpha</string>
    <string name="appCreator">Created by: Wojciech Reluga</string>


    //buttons
    <string name="dltBtn">Delete</string>
    <string name="updtBtn">Update</string>
    <string name="addBtn">Add Birthday</string>
    <string name="saveBtn">Save Birthday</string>
    <string name="addRmdrBtn">Add Reminder</string>
</resources>